# supawee

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  generate_models.py  setup.cfg  setup.py
example/: models.py
requirements/: common.txt  local.txt
supabase/: config.toml
supawee/: client.py  generate_models.py
tests/: README.md
