[flake8]
# E203: Whitespace before ':' - not compatible with black
# F403: ‘from module import *’ used;
# F405: Name may be undefined, or defined from star imports
# W503: Line break occurred before a binary operator - from older version of PEP8
ignore = E203,F403,F405,W503
max-line-length = 120

[isort]
profile = black

[metadata]
name = supawee
version = 0.1

[options]
packages = find: